[NO TICKET] Update README; minor fixes

--- a/web/content/index.html
+++ b/web/content/index.html
@@ -17,11 +17,11 @@
   <script src="js/tooltipster.bundle.min.js"></script>
   <script src="js/index.js"></script>
 
-  <title>Cytoscape.js tutorial demo</title>
+  <title>NIH-NCBI: Color Cluster</title>
 </head>
 
 <body>
-  <h1>Cytoscape.js tutorial demo</h1>
+  <h1>NIH-NCBI: Color Cluster</h1>
 
   <div id="cy" class="main">
   </div>
