[NO TICKET] Add 'cose' layout

--- a/web/content/index.html
+++ b/web/content/index.html
@@ -65,6 +65,7 @@
         <option value="cola" selected>Force-directed</option>
         <option value="concentricCentrality">Concentric by centrality</option>
         <option value="concentricHierarchyCentrality">Hierarchy by centrality</option>
+        <option value="cosa">Compound Spring Embedder</option>
         <option value="custom">Custom</option>
       </select>
     <i id="redo-layout" class="fa fa-refresh action-icon tooltip" title="Redo layout"></i>
