[NO TICKET] Additional network processing to separate communities into their own compound nodes

--- a/web/content/index.html
+++ b/web/content/index.html
@@ -37,7 +37,7 @@
     <select class id="data">
         <option value="social.json" selected>Social</option>
         <option value="genes.json">Genes</option>
-        <option value="custom.json">Custom</option>
+        <option value="custom.json">Covid Genomes</option>
       </select>
 
     <h2>Style</h2>
